- FIX:/DAQ/JavaLikeCalc: Imposible libraries functions deletion is fixed.
- !!:/SYS,/UI/QTCfg: Tooltips for fields support is added.
- FIX:/UI/VCAEngine: Deleted include widgets loading is fixed.
- FIX:/UI/VCAEngine: Copy included widgets for template pages at project is fixed.
- FIX:/UI/VCAEngine: Break next pages loading if one page load terminated is fixed.
- /UI/VCAEngine: Alarm code is improved.
- FIX:/UI/Vision: Link inspector update is fixed on group renaming.


2008-05-20 Roman
- FIX:/UI/Vision, /UI/WebVision: Buffers and archive data merging into service function is fixed.
- /UI/QTCfg: Hex and Oct integer data view is made.
- !!!:/UI/VCAEngine: Base alarm API is added.
- FIX:/UI/Vision: MDI window object central align is fixed, on QT version 4.4.


2008-05-20 Maxim
- /UI/Vision: attrSet function is modified for faster painting of the primitive ElFigure.
- /UI/Vision: dashed and dotted drawing of primitives ElFigure support is added.
- !!!/UI/WebVision: painting of the thick primitives ElFigure is modified for synchronization with QT.
- /UI/WebVision: dashed and dotted drawing of primitives ElFigure support is added.


2008-05-17 Roman
- FIX:/DAQ/BlockCalc: Broken link to block's function process is fixed.
- FIX:/UI/QTCfg: Deadlock on QT 4.4 is fixed.
- /UI/QTCfg: Refresh items tree popup menu item is added.
- FIX:/UI/QTStarter: QT 4.4 locale init is fixed. setlocale(LC_NUMERIC,"C") call after QT init is added.
- /UI/VCAEngine: First alarm code is added.


2008-05-15 Roman
- FIX:/Archive/FSArch: Message archivator end() and begin() functions is fixed.
- FIX:/UI/VCAEngine: Empty or old DB attributed load is fixed.


2008-05-12 Roman
- !!!!:/SYS: Shift deletion nodes support of dynamic nodes tree is added.
- FIX:/SYS/ControlNode: Exeptions into function TCntrNode::postEnable() process global added.
- FIX:/SYS/ControlNode: chldDel() function's logical bug is fixed.
- !!!!:/UI/VCAEngine: Shift deletion made for visual items (widgets).